--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,70 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#000000"
     tools:context=".MainActivity">
 
-   <LinearLayout
+   <FrameLayout
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
+       android:layout_height="match_parent">
 
-      <LinearLayout
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+          android:id="@+id/undoButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:orientation="horizontal">
+          android:layout_gravity="bottom|right"
+          android:layout_marginRight="20dp"
+          android:layout_marginBottom="20dp"
+          android:clickable="true"
+          android:contentDescription="@string/app_name"
+          android:visibility="visible"
+          app:backgroundTint="#2196F3"
+          app:rippleColor="#955D5D"
+          app:srcCompat="?attr/homeAsUpIndicator" />
 
-         <Button
-             android:id="@+id/redButton"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:text="Red"
-             android:textSize="10sp" />
-
-         <Button
-             android:id="@+id/greenButton"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:text="Green"
-             android:textSize="10sp" />
-
-         <Button
-             android:id="@+id/blueButton"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:text="Blue"
-             android:textSize="10sp" />
-
-         <Button
-             android:id="@+id/yellowButton"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:text="Yellow"
-             android:textSize="10sp" />
-
-         <Button
-             android:id="@+id/blackButton"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:text="Black"
-             android:textSize="10sp" />
-      </LinearLayout>
-
-      <SeekBar
-          android:id="@+id/thickBar"
+      <LinearLayout
+          android:id="@+id/linearLayout"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content" />
+          android:layout_height="match_parent"
+          android:orientation="vertical">
 
-      <com.example.drawapp.DrawingView
-          android:id="@+id/drawing_view"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
+         <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal">
 
-   </LinearLayout>
+            <Button
+                android:id="@+id/redButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Red"
+                android:textSize="10sp" />
+
+            <Button
+                android:id="@+id/greenButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Green"
+                android:textSize="10sp" />
+
+            <Button
+                android:id="@+id/blueButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Blue"
+                android:textSize="10sp" />
+
+            <Button
+                android:id="@+id/yellowButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Yellow"
+                android:textSize="10sp" />
+
+            <Button
+                android:id="@+id/blackButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Black"
+                android:textSize="10sp" />
+         </LinearLayout>
+
+         <SeekBar
+             android:id="@+id/thickBar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:max="200" />
+
+         <com.example.drawapp.DrawingView
+             android:id="@+id/drawing_view"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" />
+
+      </LinearLayout>
+   </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
